fixed genericCard shadow flicker on move

--- a/src/styles/Cards/GenericCard.scss
+++ b/src/styles/Cards/GenericCard.scss
@@ -5,7 +5,6 @@
     border: 1px solid #dedede;
     box-sizing: content-box;
     border-radius: 6px;
-    box-shadow: 0px 1px 2px 0px rgba(51, 61, 78, 0.25);
 
     &:focus,
     &:focus-within {
