--- a/src/styles/InlineTextEdit.scss
+++ b/src/styles/InlineTextEdit.scss
@@ -1,9 +1,7 @@
 .inline-input {
     border-width: 0px;
     background-color: whitesmoke;
-    color: black;
     resize: none;
-    font-size: 14px;
     width: 95%;
     margin: 15px auto;
     min-height: 24px;
